<resources>
    <string name="app_name">AG Gallery+</string>
    <string name="flip_view">Flip View</string>
    <string name="about">About</string>
    <string name="productivity_tools">Productivity Tools</string>
    <string name="data_management">Data Management</string>
    <string name="quality_analysis">Quality Analysis</string>
    <string name="videos">Videos</string>
    <string name="pictures">Pictures</string>
    <string name="comics">Comics</string>
    <string name="title_activity_scrolling_about">Avant-Garde Gallery Manager: About</string>

    <string name="action_settings">Settings</string>
    <string name="no_comics_in_catalog">No comics in catalog.</string>
    <string name="no_catalog_location">No catalog location.</string>
    <string name="menu_import">Import</string>
    <string name="menu_export">Export</string>
    <string name="title_activity_comic_viewer">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="comic_page">Comic page.</string>
    <string name="comic_export">Comic Export</string>
    <string name="catalog_size">Catalog Size:</string>
    <string name="select_output_file">Select Output File</string>
    <string name="export_file">Export File</string>
    <string name="comic_import">Comic Import</string>
    <string name="import_from_folder">Import from folder</string>
    <string name="import_from_backup">Import from backup</string>
    <string name="select_input">Select Input</string>
    <string name="import_path">Import Path:</string>
    <string name="comic_cover_page">Comic cover page.</string>
    <string name="comic_thumbnail_image">Comic thumbnail image.</string>
    <string name="comic_name">Comic name</string>
    <string name="comic_details">comic details</string>
    <string name="large_text">
        "Read on to learn more about Avant-Garde Gallery Manager.\n"
        "\n"
        "This program is aimed at obfuscating your art collection from prying eyes.\n"
        "Obfuscation is global. When turned on, every page is obfuscated. When turned off, \n"
        "every page is un-obfuscated.\n"
        "Use the menu on any page to toggle obfuscation by selecting 'Flip View'.\n"
        "You may also long-press on the page to trigger obfuscation. Your press must be stationary\n"
        "for this feature. Long-press will not turn-off obfuscation.\n"
        "\n"
        "Comics\n"
        "\n"
        "This comic catalog was originally designed to work with a Firefox web extension, \n"
        "NHComicDownloader. This plugin assists with the download of comics from nHentai.net.\n"
        "Use that tool to download comics, and then use this program to import them.\n"
        "See the Import section of this guide for more information.\n"
        "\n"
        "Using the Comic Viewer\n"
        "Tap the screen to show or hide the menu and navigation bars.\n"
        "Long-press on the screen to obfuscate the image.\n"
        "Select 'Flip View' from the menu to obfuscate or un-obfuscate the image.\n"
        "Pinch to zoom.\n"
        "Initial zoom-out will jump to the edges of the screen. Zoom again to zoom out beyond\n"
        "the edges of the screen.\n"
        "While zoomed, drag up, down, left, or right to pan the image.\n"
        "Swipe left to go to the next page.\n"
        "Swipe right to go to the previous page.\n"
        "\n"
        "Comic Import\n"
        "The comic import was originally designed to work with the FireFox web extension\n"
        "NHComicDownloader, designed in conjunction with this app. The app downloads a comic from\n"
        "nHentai.net. It downloads the first page of a comic twice - the first page is renamed\n"
        "to include nHentai comic ID and title. This is referred to as the comic cover page.\n"
        "The second copy just includes the page number.\n"
        "The user is to select the Import option from the menu. Then select the folder to import\n"
        "from. The app will look through the folder for downloaded comic pages matching a naming\n"
        "format. It will count the number of pages per comic, the number of comics, and the \n"
        "size of the import. It will verify that there is storage space on the external storage\n"
        "to store the comic. It will then move those files to the application storage location\n"
        "on external storage. Data about the comic is gathered and stored. The comic cover page\n"
        "is deleted.\n"
        "\n"
        "Comic Export\n"
        "Use the comic export feature to back-up your comics. The might choose to export to the\n"
        "same storage device that is holding the comics, so make sure to move it off your device\n"
        "by another mechanism.\n"
        "The comic export feature creates a zip file containing the comic catalog contents.\n"
        "[The import feature allows the user to import a zip file.] -feature in progress.\n"
        "\n"
        "Program Uninstall\n"
        "The data is left on the External Storage after uninstall.\n"
        "Typical location is /android/data/com.agcurations.aggallerymanager/data.\n"
        "If you uninstall, you may obtain your data from this directory.\n"
        "\n"
        "\n"

    </string>
    <string name="title_activity_comic_details">Comic Details</string>
    <string name="title_activity_comic_details_fullscreen">FullscreenActivity</string>
    <string name="search">Search</string>
    <string name="save_details">Save Details</string>
    <string name="sync_details_online">Sync Details Online</string>
    <string name="cover_page">Cover page.</string>
    <string name="comic_title">Comic Title</string>
    <string name="comic_id">Comic ID:</string>
    <string name="comicid_">ComicID</string>
    <string name="parodies">Parodies:</string>
    <string name="parodies_">Parodies</string>
    <string name="characters">Characters:</string>
    <string name="characters_">Characters</string>
    <string name="tags">Tags:</string>
    <string name="tags_">Tags</string>
    <string name="artists">Artists:</string>
    <string name="artists_">Artists</string>
    <string name="groups">Groups:</string>
    <string name="groups_">Groups</string>
    <string name="languages_">Languages:</string>
    <string name="languages">Languages</string>
    <string name="categories">Categories:</string>
    <string name="categories_">Categories</string>
    <string name="pages">Pages:</string>
    <string name="pages_">Pages</string>
    <string name="delete_comic">Delete Comic</string>
    <string name="title_activity_a_g_gallery_settings">AG Gallery Manager Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Images">Images</string>
    <string name="title_activity_video_player_full_screen">FullscreenActivity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
</resources>